proofreading /blockchain section

--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -25,7 +25,7 @@ During any given epoch, the most recent block consists of:
 The easiest way to see the blocks being mined is with the
 [Helium Blockchain Explorer](https://explorer.helium.com/). The
 [Helium Mobile App](https://helium.com/app) also shows block details. Developers
-can also use the Helium blockchain API to access all blockchain transaction and
+can also use the Helium blockchain API to access all blockchain transactions and
 metadata.
 
 ### Epochs
@@ -43,7 +43,7 @@ all the $HNT produced in that block via the `rewards` transaction.
 
 The Helium blockchain currently has 20 native transaction types. Some appear in
 nearly every block mined while others were created to be used only once and will
-never heard from again.
+never be heard from again.
 
 You can see various transaction types in action using the
 [Helium Blockchain Explorer](https://explorer.helium.com/). At a low level,
@@ -113,7 +113,7 @@ transactions:
 Chain Variables, often referred to as `chain vars`, are a series of
 configuration settings for the Helium blockchain. Chain Variables can be used to
 change things like target block time, target epoch time, the minimum number of
-targets in a POC Challenge, and much more.Chain Variables can be altered by
+targets in a POC Challenge, and much more. Chain Variables can be altered by
 submitting a transaction containing the chain variable to be changed, its new
 value, and a signature of the chain variable master key.
 
