--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -49,7 +49,7 @@ defined in their specific chain variables:
 - Target **epoch size** is `30` blocks.
 
 Recall that, in the Helium blockchain, blocks contain some number of individual
-transactions and epochs are comprised of all the blocks mined by a the current
+transactions, and epochs are comprised of all the blocks mined by the current
 Consensus Group since the last epoch.
 
 So, if the Network achieves its target block time of `60` seconds, and target
@@ -105,7 +105,7 @@ amount of Data Credits (DCs) routed by any given Hotspot per epoch. In doing so,
 the Network Data Transfer reward is proportional to the DC spent that epoch.
 This proportional relationship between Network Data Transfer reward type and DC
 is capped at 32.5% (1113.0145 HNT). Therefore, if the DC burned doesn't equal
-the value of `1113.0145` HNT the remaining HNT is redistributed to the Proof of
+the value of `1113.0145` HNT, the remaining HNT is redistributed to the Proof of
 Coverage (PoC) rewards groups pro-rata.
 
 Here are a few examples to illustrate how this works in practice:
