--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -29,7 +29,7 @@ that succeeds based on the amount of reliable coverage it can create for users
 deploying connected devices on it. As such, it required a work algorithm that
 was built for this use case. Proof-of-Coverage takes advantage of the unique,
 undeniable properties of radio frequency (RF) to produce proofs that are
-meaningful to the Helium Network and its participants. Specifically, PoCn relies
+meaningful to the Helium Network and its participants. Specifically, PoC relies
 on the following characteristics:
 
 - RF has limited physical propagation and, therefore, distance;
@@ -57,7 +57,7 @@ POC Challenges involve three distinct roles:
 1. **Challenger** - The Hotspot that constructs and issues the POC Challenge. Hotspots issue
 challenges approximately once per every 240 blocks. **
 2. **Transmitter** - Sometimes called "Challengee". This Hotspot is the target of the POC 
-challenge and is responsible for transmitting (or "beaconing") challenge packets to potentially be witnesses by 
+challenge and is responsible for transmitting (or "beaconing") challenge packets to potentially be witnessed by 
 geographically proximate Hotspots.
 3. ** Witness** - Hotspots that are geographically proximate to the Transmitter and report the existence of the 
 challenge packet after it has been transmitted. 
@@ -65,7 +65,7 @@ challenge packet after it has been transmitted.
 
 ### Challenge Proof Construction and Target Selection
 
-As noted above, Hotspot are currently allowed to submit a challenge proof roughly once per 
+As noted above, Hotspots are currently allowed to submit a challenge proof roughly once per 
 240 blocks. They do this reliably [to earn the portion of HNT rewards allocated to challengers](/blockchain/mining). 
 The Challenger first generates an ephemeral public/private key pair to be used in the challenge. 
 A SHA256 digest of the public key and the SHA256 digest of the private key are both submitted, 
@@ -74,17 +74,17 @@ blockchain, the hash of the block that the receipt appears in is combined with t
 ephemeral public key and the challenger's identity to generate verifiable entropy. A uniform random 
 number generated via this entropy is then used to select the target from all Hotspots on the Network.
 
-After the the challenge packet created it is then delivered to the transmitter via the Helium Peer-to-Peer Network. 
+After the the challenge packet is created, it is then delivered to the transmitter via the Helium Peer-to-Peer Network. 
 The target receives the challenge packet, decrypts the outermost layer using its private key and the ephemeral public 
 key for this challenge (this ephemeral public key appears in the PoC packet and the receiving Hotspot can inspect 
 the blockchain for an active PoC receipt with the corresponding SHA256 of the ephemeral key), and immediately 
-transmits the resultant packet to the Helium Network. Any number proximate geographic Hotspots will hear it and will Witness the packet.
+transmits the resultant packet to the Helium Network. Any number of proximate geographic Hotspots will hear it and will Witness the packet.
 
 ### Witnesses 
 
 As of [HIP 15](https://github.com/helium/HIP/blob/master/0015-beaconing-rewards.md), Proof of Coverage 
 relies entirely on beaconing. A beacon is a single transmission witnessed by any Hotspot. Previous 
-versions uses multi-hop challenge paths that didn't accurately test Hotspots on what they are built to do: 
+versions used multi-hop challenge paths that didn't accurately test Hotspots on what they are built to do: 
 capture RF packets.
 
 After a Transmitter receives the challenge, it will beacon the challenge packet. There is no
