--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -34,7 +34,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   		<h2>Introduction</h2>
   	</div>
     <div class="col col--6">
-    	<p>Helium is a global, distributed network of Miners that create public, long-range wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are compensated in $HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks. Today, the Helium blockchain, and it thousands of miners, provide access to the largest, public LoRaWAN Network in the world.</p>
+    	<p>Helium is a global, distributed network of Miners that create public, long-range wireless coverage for <a href="https://en.wikipedia.org/wiki/LoRa">LoRaWAN</a>-enabled IoT devices. Miners produce and are compensated in $HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks. Today, the Helium blockchain, and its thousands of miners, provide access to the largest, public LoRaWAN Network in the world.</p>
     </div>
     <div class="col col--6">
     	<p>This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. </p>
