add section on wallets

--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -139,3 +139,6 @@ Both the Helium Mobile Wallet and the CLI Wallet create and use keys based on
 the [ed25519 public key signature system](https://ed25519.cr.yp.to/). The CLI
 can also support NIST p-256 keys. And the Helium blockchain supports both key
 types.
+
+To learn more about existing wallet solutions, check out our
+[section on wallets](/wallets/wallets).
