adding details on burning HNT for DCs to maker wallets

--- a/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
@@ -17,3 +17,4 @@ Hotspot Manufacturers - commonly referred to as **Makers** - are hardware manufa
 * [Hotspot Integration Testing](/mine-hnt/hotspot-makers/hotspot-integration-testing)
 * [Hotspot BLE Services](/mine-hnt/hotspot-makers/hotspot-ble-services)
 * [Hotspot WiFi Configuration](/mine-hnt/hotspot-makers/hotspot-wifi-configuration)
+* [Burning HNT to your Maker Wallet](/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet)
