--- a/docs/mine-hnt/hotspot-makers/approved-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/approved-makers.mdx
@@ -15,7 +15,12 @@ Since the introduction of [HIP19](https://github.com/helium/HIP/blob/master/0019
 | Maker Name			| HIP19 Application | Date Approved | Onboarding Maker Address |
 | :-------------------- | :-----------------|:--------------|:-------------------------|
 | [Helium, Inc.](https://helium.com)      	| N/A				  |NA			   	  |[13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53](https://explorer.helium.com/accounts/13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53)|  
-| [Nebra](https://www.nebra.com/)      	| [Nebra](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/nebra-ltd.md) | 2020-12-10 |Not Yet Created|  
+| [Nebra Ltd](https://www.nebra.com/)      	| [Nebra](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/nebra-ltd.md) | 2020-12-10 |[13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3](https://explorer.helium.com/accounts/13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3)|  
 | [SyncroB.it](https://syncrob.it/)      	| [SyncroB.it](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/syncrobit.md) | 2020-12-14 |Not Yet Created|
 | [RAK Wireless/CalChip](https://www.calchipconnect.com/) | [RAK/CalChip](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/rak-wireless.md) | 2020-12-29 |[13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY)|  
 | [EasyLinkin](http://www.easylinkin.net/)   | [EasyLinkin](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/easylinkin.md) | 2021-01-12 |Not Yet Created|
+
+
+
+
+
