--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -362,7 +362,7 @@ to keep your miner running.
 ### Interact with the Miner within the Container
 
 You may want to interrogate the Miner or interact with it it as described in the
-[using a miner section](/mine-hnt/run-a-miner#using-the-miner). Docker's
+[using a miner section](/mine-hnt/build-a-packet-forwarder/#using-the-miner). Docker's
 `exec` command enables this, eg:
 
 ```text
@@ -370,7 +370,7 @@ docker exec miner miner info height
 ```
 
 In other words, prepend `docker exec miner` to any of the commands documented in
-the [using a miner section](/mine-hnt/run-a-miner#using-the-miner)). Or
+the [using a miner section](/mine-hnt/build-a-packet-forwarder/#using-the-miner)). Or
 create an alias such as: `alias miner="docker exec miner miner"`
 
 ### Updating the Docker Image
