MQTT Doc Link Fix

--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -49,7 +49,7 @@ Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 ## MQTT Messages
 
 The MQTT for downlink and uplink follow the
-[JSON schema documented here.](json-schema)
+[JSON schema documented here.](../json-schema/)
 
 ## Connecting Integrations to Devices
 
