--- a/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
@@ -41,7 +41,7 @@ If your wallet address does not have enough DCs to pay for required Hotspot Tran
 
 ## Maker Integration Test Wallet Address
 
-During the course of your testing, you can use the Maker Integration Test wallet address created by the DeWi.  Here is that address:
+During the course of your testing, you can use the Maker Integration Test wallet address created by the DeWi.  This wallet does not contain any Data Credits so onboarding transactions will fail but it allows you to smoke test the onboarding steps. Here is that address:
 
 
 [https://explorer.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr](https://explorer.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr)
