--- a/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
@@ -25,16 +25,18 @@ As an approved Maker, will supply DeWi with the onboarding details for all the H
 
 ## Hotspot Data Credit Fees
 
-In order for any Hotspot to join the Helium Blockchain, its maker address must have sufficient Data Credits. A full list of [Helium blockchain data credit fees can be found here](/blockchain/transaction-fees). Hotspot Makers need to account for at least `5,000.000` total Data Credits per Hotspot. Specifically, for each Hotspot, a Maker must supply:
+In order for any Hotspot to join the Helium Blockchain, its maker address must have sufficient Data Credits. A full list of [Helium blockchain data credit fees can be found here](/blockchain/transaction-fees). Hotspot Makers need to account for at least `5,135,000` total Data Credits per Hotspot. Specifically, for each Hotspot, a Maker must supply:
 
-* `4,000,000` Data Credits for the **Add Hotspot** fee. This is a one-time fee.
-* `1,000,000` Data Credits for the **Assert Location** fee. Each Hotspot Maker is required to supply at least one **Assert Location* for their Hotspots. 
+* `4,000,000` Data Credits for the **Add Hotspot** transaction. This is a one-time fee.
+* `65,000` Data Credits for the transaction fee to execute the **Add Hotspot** transaction. 
+* `1,000,000` Data Credits for the **Assert Location** transaction. Each Hotspot Maker is required to supply at least one **Assert Location* for their Hotspots. 
+* `70,000` Data Credits for the transaction fee to execute the **Assert Location** transaction.
 
-As a Maker, if you only the one-time **Add Hotspot** fee and one **Assert Location** fee, you'll supply `5,000.000` total Data Credits per Hotspot. Add `1,000,000` Data Credits for each additional **Assert Location** fee you with to supply.
+As a Maker, if you only the one-time **Add Hotspot** fee and one **Assert Location** fee, you'll supply `5,135,000` total Data Credits per Hotspot. Add `1,070,000` Data Credits for each additional **Assert Location** fee you wish to supply.
 
 :::warning 
 
-If your wallet address does not have enough DCs to pay for required Hotspot Transactions, they will fail. 
+If your wallet address does not have enough DCs to pay the required Hotspot transaction fees, these transactions will fail. 
 
 :::
 
