--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -16,9 +16,9 @@ here.
 
 :::warning
 
-LoRa gateways on the Helium Network need to transmit on uplink frequencies! This
-may require special configuration at times as some gateways have their transmit
-frequencies limited to only downlink frequencies.
+LoRa gateways on the Helium Network must transmit on uplink frequencies. Some
+gateways limit their transmit range to downlink frequencies and special
+configuration may be necessary.
 
 :::
 
