remove extra can. edit

--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -52,7 +52,7 @@ one or more OUI's are interested in the Join Request.
 This is done by querying every filter maintained and written to the blockchain
 by every OUI. The filters themselves are _xorhash_ tables, thus the AppEui and
 DevEui cannot be extracted. Only with the AppEui and DevEui in-hand can the
-gateway can run it through the table and see if it is in the table.
+gateway run it through the table and to see if it's there.
 
 In response to the Join Request, a Join Accept is sent down, assigning the
 DevAddr. Due to the multi-tenancy on the Helium Network, the LNS may only assign
