--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -8,7 +8,8 @@ slug: /lorawan-on-helium/frequency-plans
 ## Frequencies on the Helium Network
 
 Helium's LoRaWAN Network is built upon 8-channel gateways. This page will help
-you confirm the appropriate frequencies for gateway configuration each country.
+you confirm the appropriate frequencies for gateway configuration for each
+country.
 
 Feel free to use
 [our packet forwarder configuration examples](https://github.com/helium/sx1302_hal/tree/helium/hotspot/packet_forwarder)
