--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -20,3 +20,10 @@ Organizationally Unique Identifiers (OUIs) are registered identities on the Heli
 packets to an end-device, a network user needs to operate an OUI (or use the [Helium Console](/use-the-network/console)
 product, which is a Helium operated OUI).
 
+An OUI has some specificities related to LoRaWAN, [documented here](/lorawan-on-helium#the-oui), but with respect to the
+blockchain, that [only addresses registered as endpoints for the OUI](https://github.com/helium/proto/blob/master/src/blockchain_txn_oui_v1.proto#L6)
+may open and close state channels for an OUI.
+
+# State Channels
+
+
