pckt fwd language tweaks, link clean up

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -16,9 +16,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<h2 className="subtitle">Explore our guides and examples to build and use the Helium Network.</h2>
 			{/* <a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a> */}
 			<div>
-				<a href="/blockchain"><span class="badge badge--secondary">Developers</span></a>
-				<a href="/mine-hnt"><span class="badge badge--secondary">Miners</span></a>
-				<a href="/community-governance"><span class="badge badge--secondary">Community</span></a>
+				<a href="/blockchain"><span class="badge badge--secondary">Blockchain</span></a>
+				<a href="/mine-hnt"><span class="badge badge--secondary">Mine HNT</span></a>
+				<a href="/use-the-network"><span class="badge badge--secondary">Use the Network</span></a>
 			</div>
 		</div>
 		<div class="col col--8">
@@ -79,6 +79,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 		    <a className="block" href="/use-the-network/devices/ready-to-use"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use Devices</a>
 		    <a className="block" href="/use-the-network/devices/development"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Development Devices</a>
 		    <a className="block" href="/use-the-network/console"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Helium Console</a>
+			<a className="block" href="/lorawan-on-helium"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> LoRaWAN on Helium</a>	
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
 		    <img className="homeicon" src={useBaseUrl("img/home/communityicon.png")} />
