--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -12,18 +12,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 :::warning 
 
 The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is 
-not yet supported. Please join the Helium Discord Server and the #hotspot-diy-hardware channel for
-the latest updates on the roadmap here.
+not supported. Please join the #diy-packet-forwarder in the [Helium Discord Server](https://discorg.gg/helium) for the 
+latest updates.
 
 :::
 
-
-:::info 
-
-The `#hotspot-diy-hardware` channel in the [Helium Discord](https://discord.gg/helium) is a great community resource 
-for real-tume help when deploying a Helium Packet Forwarder. 
-
-:::
 
 
 ## Packet Forwarder Architecture
