--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -25,4 +25,4 @@ A full list of approved Hotspots with details on how to acquire them [can be fou
 
 ### Build a Helium Packet Forwarder
 
-As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWNAN Gateway can be converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
+As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWAN Gateway can be converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
