--- a/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet.mdx
@@ -20,7 +20,7 @@ A full list of approved maker wallet addresses [can be seen via this API](https:
 
 ## Maker Wallet Address Integration
 
-As an approved Maker, will supply DeWi with the onboarding details for all the Hotspots you manufacture and distribute. In turn, the DeWi adds them to the onboarding server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the blockchain will add the Hotspot. And if you've [integrated your Hotspot in the Hotspot App onboarding flow](/mine-hnt/hotspot-makers/hotspot-integration-testing), the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be used for the transactions with your wallet address as the payer. 
+As an approved Maker, you will supply DeWi with the onboarding details for all the Hotspots you manufacture and distribute. In turn, the DeWi adds them to the onboarding server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the blockchain will add the Hotspot. And if you've [integrated your Hotspot in the Hotspot App onboarding flow](/mine-hnt/hotspot-makers/hotspot-integration-testing), the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be used for the transactions with your wallet address as the payer. 
 
 
 ## Hotspot Data Credit Fees
@@ -32,7 +32,7 @@ In order for any Hotspot to join the Helium Blockchain, its maker address must h
 * `1,000,000` Data Credits for the **Assert Location** transaction. Each Hotspot Maker is required to supply at least one **Assert Location* for their Hotspots. 
 * `70,000` Data Credits for the transaction fee to execute the **Assert Location** transaction.
 
-As a Maker, if you only the one-time **Add Hotspot** fee and one **Assert Location** fee, you'll supply `5,135,000` total Data Credits per Hotspot. Add `1,070,000` Data Credits for each additional **Assert Location** fee you wish to supply.
+As a Maker, if you only supply the one-time **Add Hotspot** fee and one **Assert Location** fee, you'll supply `5,135,000` total Data Credits per Hotspot. Add `1,070,000` Data Credits for each additional **Assert Location** fee you wish to supply.
 
 :::warning 
 
