remove device label fix

--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -386,10 +386,10 @@ Device added to label successfully
 ### Remove Device Label
 
 ```
-DELETE  https://console.helium.com/api/v1/devices/:device_id/labels
+DELETE  https://console.helium.com/api/v1/devices/:device_id/labels/:label_id
 ```
 
-Add Device to Label
+Remove Device Label
 
 <Tabs
   block={true}
