--- a/docs/mine-hnt/light-hotspot.mdx
+++ b/docs/mine-hnt/light-hotspot.mdx
@@ -40,4 +40,4 @@ The most current source of Light Hotspot development information is the #light-h
 
 ## Planned Light Hotspot Architecture
 
-## Build a Light Gateway
+## Build a Light Hotspot
