--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -49,7 +49,7 @@ For anyone who has deployed `15` or more Hotspots, you can receive the `Patron` 
 
 #### Insiders
 
-[Helium Insiders](https://www.helium.com/insider) are the Network's local connection to growing communities that aim to expand wireless coverage in their towns and cities. We’d love for you to help spread the word (and you don’t have to be a developer or very technical to do so). Insiders was built thank and reward the community for their help and support in growing The People’s Network. [Please apply](https://www.helium.com/insider).
+[Helium Insiders](https://www.helium.com/insider) are the Network's local connection to growing communities that aim to expand wireless coverage in their towns and cities. We’d love for you to help spread the word (and you don’t have to be a developer or very technical to do so). Insiders was built to thank and reward the community for their help and support in growing The People’s Network. [Please apply](https://www.helium.com/insider).
 
 
 ### Social Media 
