--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -40,6 +40,18 @@ Held most weeks on Wednesdays at 3PM Pacific on Zoom, Helium Hacks Happy Hour (4
 
 * [Register for Helium Hacks Happy Hour](https://zoom.us/meeting/register/tJ0qdeyorDgqHdbWZTQhBSphsFEytiyc5BiP) 
 
+### Community Programs 
+
+#### Patrons 
+
+For anyone who has deployed `15` or more Hotspots, you can receive the `Patron` Discord status, Patron-exclusive Newsletter content, and custom Patron swag. To join the program, please email patron@helium.com with proof of purchase for `15` or more of any [community-approved Hotspot options](https://helium.com/mine).
+
+
+#### Insiders
+
+[Helium Insiders](https://www.helium.com/insider) are the Network's local connection to growing communities that aim to expand wireless coverage in their towns and cities. We’d love for you to help spread the word (and you don’t have to be a developer or very technical to do so). Insiders was built to thank and reward the community for their help and support in growing The People’s Network. [Please apply](https://www.helium.com/insider).
+
+
 ### Social Media 
 
 Helium is everywhere. Here's the full list:
